Bug 324862 - Scale bar follows mouse.
Summary: Scale bar follows mouse.
Status: RESOLVED FIXED
Alias: None
Product: marble
Classification: Applications
Component: general (other bugs)
Version First Reported In: 1.6 (KDE 4.11)
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Dennis Nienhüser
URL: https://git.reviewboard.kde.org/r/115...
Keywords: junior-jobs
Depends on:
Blocks:
 
Reported: 2013-09-12 23:46 UTC by Tom Hardy
Modified: 2014-03-29 15:45 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tom Hardy 2013-09-12 23:46:39 UTC
Unlock the scale bar plugin and move it slightly.  Then move the pointer to a different portion of the map, click and start to drag.  The scale bar will jump to the mouse position and start to follow it around.

This bug also applied to Marble 1.5.


Reproducible: Always
Comment 1 Tom Hardy 2013-09-15 00:14:08 UTC
This only appears to happen if you grab the scale bar at a point that is also over another info box style plugin.  (I stack my my scale bar over the "routing" info box.)  It is associated with a change of the mouse pointer to the "fleur", the one associated with moving windows.  The behavior will continue until you move another info box or restart Marble.
Comment 2 Tom Hardy 2013-11-14 18:51:59 UTC
And it appears to be more general; I've duplicated it with the copyright notice.  If it is stacked on top of the routing info box and then moved, it will adopt the same behavior.
Comment 3 Dennis Nienhüser 2014-03-05 17:24:06 UTC
See also https://git.reviewboard.kde.org/r/115622/
Comment 4 Abhinav Gangwar 2014-03-15 15:46:30 UTC
I want to work on this task
Comment 5 Dennis Nienhüser 2014-03-29 15:45:42 UTC
Git commit 9de5a28dc12031c8910b1fc1def6621e4b359fb5 by Dennis Nienhüser.
Committed on 29/03/2014 at 15:42.
Pushed by nienhueser into branch 'master'.

Do not filter mouse press/release events.

This reverts c4e0678. Please test for possible regressions, especially
the one noted in bug 242414 (when using oxygen, dragging the map moves
the whole window).
Related: bug 242414

M  +3    -3    src/lib/marble/MarbleWidgetInputHandler.cpp

http://commits.kde.org/marble/9de5a28dc12031c8910b1fc1def6621e4b359fb5