Do not filter mouse press/release events.

This reverts c4e0678. Please test for possible regressions, especially
the one noted in bug 242414 (when using oxygen, dragging the map moves
the whole window).

BUG: 324862
CCBUG: 242414